# NREIP_Su2026_Radar_Emulator

./: .gitignore  README.md  midpoint_presentation.odp
custom_oot_modules/: install.sh
custom_oot_modules/gr-lfmTools/: CMakeLists.txt  MANIFEST.md
custom_oot_modules/gr-lfmTools/.conda/: README.md
custom_oot_modules/gr-lfmTools/.conda/recipe/: meta.yaml
custom_oot_modules/gr-lfmTools/apps/: CMakeLists.txt
custom_oot_modules/gr-lfmTools/cmake/Modules/: gnuradio-lfmToolsConfig.cmake
custom_oot_modules/gr-lfmTools/docs/: CMakeLists.txt  README.lfmTools
custom_oot_modules/gr-lfmTools/docs/doxygen/: CMakeLists.txt  Doxyfile.in
custom_oot_modules/gr-lfmTools/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
custom_oot_modules/gr-lfmTools/docs/doxygen/other/: group_defs.dox  main_page.dox
custom_oot_modules/gr-lfmTools/grc/: CMakeLists.txt  lfmTools_LFM_On_Trigger.block.yml  lfmTools_LFM_Source.block.yml  lfmTools_peak_detector.block.yml  lfmTools_peak_detector_2.block.yml  lfmTools_peak_file_sink.block.yml
custom_oot_modules/gr-lfmTools/include/gnuradio/lfmTools/: CMakeLists.txt  LFM_On_Trigger.h  LFM_Source.h  api.h  peak_detector.h  peak_detector_2.h  (+1 more)
custom_oot_modules/gr-lfmTools/lib/: CMakeLists.txt  LFM_On_Trigger_impl.cc  LFM_On_Trigger_impl.h  LFM_Source_impl.cc  LFM_Source_impl.h  peak_detector_2_impl.cc  peak_detector_2_impl.h  peak_detector_impl.cc  peak_detector_impl.h  peak_file_sink_impl.cc  peak_file_sink_impl.h
custom_oot_modules/gr-lfmTools/python/lfmTools/: __init__.py
custom_oot_modules/gr-lfmTools/python/lfmTools/bindings/: CMakeLists.txt  LFM_Source_python.cc  failed_conversions.txt  peak_detector_2_python.cc  peak_detector_python.cc  peak_file_sink_python.cc  python_bindings.cc
custom_oot_modules/gr-lfmTools/python/lfmTools/bindings/docstrings/: LFM_On_Trigger_pydoc_template.h  peak_detector_2_pydoc_template.h  peak_detector_pydoc_template.h  peak_file_sink_pydoc_template.h
custom_oot_modules/gr-lfm_experimental/: CMakeLists.txt  MANIFEST.md
custom_oot_modules/gr-lfm_experimental/.conda/: README.md
custom_oot_modules/gr-lfm_experimental/.conda/recipe/: meta.yaml
custom_oot_modules/gr-lfm_experimental/apps/: CMakeLists.txt
custom_oot_modules/gr-lfm_experimental/cmake/Modules/: gnuradio-lfm_experimentalConfig.cmake
custom_oot_modules/gr-lfm_experimental/docs/: CMakeLists.txt  README.lfm_experimental
custom_oot_modules/gr-lfm_experimental/docs/doxygen/: CMakeLists.txt  Doxyfile.in
custom_oot_modules/gr-lfm_experimental/grc/: CMakeLists.txt  lfm_experimental_lfm_on_trigger.block.yml
custom_oot_modules/gr-lfm_experimental/lib/: CMakeLists.txt  lfm_on_trigger_impl.cc  lfm_on_trigger_impl.h
custom_oot_modules/gr-lfm_experimental/python/lfm_experimental/: CMakeLists.txt  __init__.py
custom_oot_modules/gr-lfm_experimental/python/lfm_experimental/bindings/: CMakeLists.txt  lfm_on_trigger_python.cc  python_bindings.cc
custom_oot_modules/gr-lfm_experimental/python/lfm_experimental/bindings/docstrings/: lfm_on_trigger_pydoc_template.h
grc/: delay.txt  lfm_source_test.grc  lfm_source_test.py  lfm_source_test_epy_block_0.py  measure_target_emulator_delay.grc  new.py  peak_detection.txt  threshold_detection_and_trigger.grc
(+6 files in other folders)
